currency rate add

--- a/cmd/main/index.html
+++ b/cmd/main/index.html
@@ -125,7 +125,7 @@
                 </table>
                 <br>
                 <h4>Go to <a href="/">Add Currency</a></h4>
-                <h4>Go to <a href="/addconversionrate">Add Conversion Rate</a></h4>
+                <h4>Go to <a href="/addcurrencyrate">Add Conversion Rate</a></h4>
                 <h4>Go to <a href="/listcurrency">List Currency</a></h4>
                 <h4>Go to <a href="/">Convert Currency</a></h4>
             </div>
